# neuroconv

./: .clinerules  .codecov.yml  .codespellrc  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  base_gin_test_config.json  checked_files.md  codecov.yml  context7.json  exclude-spelling.txt  files_to_check.md  getter_benchmark.py  getter_benchmark_gt.yaml  make_env.yml  make_env_testing.yml  make_environment.yml  pr_1708_message_for_me.md  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements-full-windows.txt  requirements-full.txt  requirements-minimal.txt  requirements-rtd.txt  requirements-test.txt  requirements-testing.txt  requirements-tests.txt  requirements.txt  run_inscopix_test.py  setup.py  temp_test.py
.github/: CODE_OF_CONDUCT.rst  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature_request.md  feature_request.yml  format_request.yml
.github/scripts/: collect_gallery_formats.py  discover_formats.py
.github/workflows/: add-to-dashboard.yml  all_os_versions.txt  all_python_versions.txt  assess-file-changes.yml  auto-format.yml  auto-publish-docker-dev-branch.yml  auto-publish.yml  auto-release-docker.yml  aws_tests.yml  build_and_upload_docker_image_dev.yml  build_and_upload_docker_image_dev_for_ec2_deployment.yml  build_and_upload_docker_image_latest_release.yml  build_and_upload_docker_image_latest_release_for_ec2_deployment.yml  build_and_upload_docker_image_of_latest_release.yml  build_and_upload_docker_image_rclone_with_config.yml  build_and_upload_docker_image_yaml_variable.yml  check-spelling.yml  check_docstrings.yaml  ci-development.yml  ci-full.yml  ci-production.yml  ci.yml  codespell.yml  copilot-setup-steps.yml  dailies.yml  deploy-tests.yml  dev-dailies.yml  dev-testing.yml  dev_testing.yml  docker_testing.yml  doctests.yml  formatwise-installation-testing.yml  formatwise_installation_testing.yml  formatwise_testing.yml  full-tests-linux.yml  full-tests-mac-windows.yml  full-tests-mac.yml  full-tests-windows.yml  generic_aws_tests.yml  live-service-testing.yml  (+21 more)
behavior_testing_data/FicTrac/: README.md
behavior_testing_data/audio/: README.md
behavior_testing_data/medpc/: README.txt  example_medpc_file_06_06_2024.txt
behavior_testing_data/neuralynx/: test.nvt
behavior_testing_data/sleap/: README.txt  melanogaster_courtship.slp  predictions_1.2.7_provenance_and_tracking.slp
dockerfiles/: dockerfile_neuroconv_with_rclone  neuroconv_dev_dockerfile  neuroconv_dev_for_ec2_deployment  neuroconv_developer_build_auto_config  neuroconv_developer_build_dockerfile  neuroconv_dockerfile  neuroconv_latest_release_dockerfile  neuroconv_latest_yaml_variable  neuroconv_release_dockerfile  neuroconv_release_for_ec2_deployment  rclone_auto_config_dockerfile  rclone_with_config
docs/: api.rst  conf.py  contribute.rst  conversion_example_gallery.rst  data_interface.rst  developer_guide.rst  index.rst  part01_core_nwb.rst  part02_nwb_apis.rst  part03_format_conversions.md  part04_conversion_tools.rst  part05_dandi.rst  part05_web_ui.rst  requirements.txt  tutorials.rst  user_guide.rst  using_nwb_conversion_tools.rst
docs/_static/: dimension-order-visualizer-embed.html  dimension-order-visualizer.html  switcher.json
docs/_templates/: layout.html
docs/api/: basedatainterface.rst  index.rst  interfaces.base.rst  interfaces.behavior.rst  interfaces.ecephys.rst  interfaces.events.rst  interfaces.fiber_photometry.rst  interfaces.icephys.rst  interfaces.ophys.rst  interfaces.rst  interfaces.text.rst  nwbconverter.rst  tools.aws.rst  tools.data_transfers  tools.data_transfers.rst  tools.iterative_write.rst  tools.neo.rst  tools.nwb_helpers.rst  tools.ontology.rst  tools.path_expansion.rst  tools.roiextractors.rst  tools.rst  tools.signal_processing.rst  tools.spikeinterface.rst  tools.testing.rst  tools.yaml_to_nwb_conversion.rst  utils.rst
docs/catalogue/: catalogue  catalogue.rst  index.rst
docs/conversion_examples_gallery/: conftest.py  conversion_example_gallery.rst  index.rst
docs/developer_guide/: aws_batch_deployment.rst  build_data_interface.rst  building_documentation.rst  ci_workflows.rst  contributing.rst  docker_images.rst  ecephys_metadata_structure.rst  events_metadata_structure.rst  fiber_photometry_metadata_structure.rst  index.rst  making_a_release  making_a_release.rst  (+7 more)
documentation/: conversion_guide.py  conversion_tools_structure.md  converting_data_to_nwb.md  neuroconv_structure.md
memory-bank/: activeContext.md  checked_files.md  checked_functions.md  files_to_check.md  functions_to_check.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
nwb_conversion_tools/: BaseDataInterface.py  BaseRecordingExtractorInterface.py  BaseSegmentationExtractorInterface.py  BaseSortingExtractorInterface.py  NWBConverter.py  NeuroscopeDataInterface.py  __init__.py  auto_qc.py  basedatainterface.py  baseimagingextractorinterface.py  baselfpextractorinterface.py  baseprocessinginterface.py  baserecordingextractorinterface.py  basesegmentationextractorinterface.py  basesortingextractorinterface.py  conversion_tools.py  converter.py  json_schema_utils.py  neuroscopedatainterface.py  new_convert_yuta.py  nwbconverter.py  spikeglxdatainterface.py  template_metafile.yml  utils.py
nwbn_conversion_tools/: __init__.py  auto_qc.py  base.py  converter.py  metafile.schema.json
tests/: docker_rclone_with_config_cli.py  docker_yaml_conversion_specification_cli.py  imports.py  metafile_tests.yml  spikeinterface_sorting.pkl  test_chunk_iterators.py  test_converter.py  test_copilot_setup_validation.py  test_gin.py  test_imagingextractordatachunkiterator.py  test_imports.py  test_interfaces.py  test_json_schema_utils.py  test_keywords.py  test_si.py  test_simple.py  test_tools.py
tmp_scripts/: hed_m1mptp_log.json  hed_m1mptp_results.json  test_hed_m1mptp.py  test_hed_real_api.py
tutorials/: detailed-tutorial.ipynb  simple-tutorial.ipynb
(+1857 files in other folders)
