[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"


[project]
name = "neuroconv"
version = "0.8.2"
description = "Convert data from proprietary formats to NWB format."
readme = "README.md"
authors = [
    { name = "Cody Baker" },
    { name = "Szonja Weigl" },
    { name = "Heberto Mayorquin" },
    { name = "Paul Adkisson" },
    { name = "Luiz Tauffer" },
    { name=  "Alessandra Trapani" },
    { name = "Ben Dichter", email = "ben.dichter@catalystneuro.com" },
]


license = { file = "license.txt" }
keywords = ["nwb", "NeurodataWithoutBorders"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "License :: OSI Approved :: BSD License",

]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22.0; python_version <= '3.11'",
    "numpy>=1.26.0; python_version >= '3.12'",
    "PyYAML>=5.4",
    "h5py>=3.9.0",
    "hdmf>=4.0.0",
    "hdmf_zarr>=0.11",
    "pynwb>=3.0.0",
    "pydantic>=2.0",
    "typing_extensions>=4.1.0",
    "psutil>=5.8.0",
    "tqdm>=4.60.0",
    "pandas",
    "parse>=1.20.0",  # For the path expansion functionality
    "click",  # for CLI access point in the yaml conversion specificatio
    "jsonschema>=3.2.0",
    "docstring-parser",  # For building json schema from method signatures
    "packaging",  # Issue 903
    "referencing", # for the json schema references
    "numcodecs<0.16.0", # 0.16.0 is incompatible with zarr < 3: https://github.com/zarr-developers/numcodecs/issues/721
]


[project.urls]
"Homepage" = "https://github.com/catalystneuro/neuroconv"
"Documentation" = "https://neuroconv.readthedocs.io/"
"Changelog" = "https://github.com/catalystneuro/neuroconv/blob/main/CHANGELOG.md"


[project.scripts]
neuroconv = "neuroconv.tools.yaml_conversion_specification._yaml_conversion_specification:run_conversion_from_yaml_cli"

[project.optional-dependencies]
sorting_analyzer = [   # These dependencies are for testing the sorting analyzer tool
    "scipy",
]

dandi = ["dandi>=0.70.0"]
compressors = ["hdf5plugin"]
aws = ["boto3"]

##########################
# Modality-specific Extras
##########################

## Text
csv = [
]
excel = [
    "openpyxl",
    "xlrd",
]
text = [
    "neuroconv[csv]",
    "neuroconv[excel]",
]

## Behavior
audio = [
    "ndx-sound>=0.2.2",
    "scipy", # for scipy.io.wavfile
]
sleap = [
    "av>=10.0.0",
    "sleap-io>=0.5.2",
    "ndx-pose>=0.2.2",
]
deeplabcut = [
    "ndx-pose>=0.2",
    "tables; platform_system != 'Darwin'",
    "tables>=3.10.1; platform_system == 'Darwin' and python_version >= '3.10'",
]
fictrac = [
]
video = [
    "opencv-python-headless>=4.8.1.78",
]
lightningpose = [
    "ndx-pose>=0.2",
    "neuroconv[video]",
]
medpc = [
    "ndx-events==0.2.1",
]
behavior = [
    "neuroconv[sleap]",
    "neuroconv[audio]",
    "neuroconv[deeplabcut]",
    "neuroconv[fictrac]",
    "neuroconv[video]",
    "neuroconv[lightningpose]",
    "neuroconv[medpc]",
    "ndx-miniscope>=0.5.1",  # This is for the miniscope behavior data interface, not sure is needed
]


## Ecephys
ecephys_minimal = [  # Keeps the minimal versions of ecephys dependencies in the repo
    "spikeinterface>=0.103.0",
    "neo>=0.14.3"
]
alphaomega = [
    "neuroconv[ecephys_minimal]",
]
axon = [
    "neuroconv[ecephys_minimal]",
]
axona = [
    "neuroconv[ecephys_minimal]",
]
biocam = [
    "neuroconv[ecephys_minimal]",
]
blackrock = [
    "neuroconv[ecephys_minimal]",
]
cellexplorer = [
    "pymatreader>=0.0.32",
    "neuroconv[ecephys_minimal]",
]
edf = [
    "pyedflib>=0.1.36",
    "neuroconv[ecephys_minimal]",
]
intan = [
    "neuroconv[ecephys_minimal]",
]
kilosort = [
    "neuroconv[ecephys_minimal]",
]

maxwell = [
    "neuroconv[ecephys_minimal]",
]
mcsraw = [
    "neuroconv[ecephys_minimal]",
]
mearec = [
    "neuroconv[ecephys_minimal]",
    "MEArec>=1.8.0",
    "setuptools; python_version >= '3.12'"
]
neuralynx = [
    "neuroconv[ecephys_minimal]",
    "natsort>=7.1.1",
]
neuroscope = [
    "neuroconv[ecephys_minimal]",
    "lxml>=4.6.5",
]
openephys = [
    "neuroconv[ecephys_minimal]",
    "lxml>=4.9.4",
]
phy = [
    "neuroconv[ecephys_minimal]",
]

plexon = [
    "neuroconv[ecephys_minimal]",
]

plexon2 = [
    "neuroconv[ecephys_minimal]",
    "zugbruecke >= 0.2.1; platform_system != 'Windows'",
]
spike2 = [
    "neuroconv[ecephys_minimal]",
    "sonpy>=1.7.1; python_version=='3.9' and platform_system != 'Darwin'",
]
spikegadgets = [
    "neuroconv[ecephys_minimal]",
]
spikeglx = [
    "neuroconv[ecephys_minimal]",
    "ndx-events==0.2.1",  # For adding events from the nidq recording
]
tdt = [
    "neuroconv[ecephys_minimal]",
]
whitematter = [
    "neuroconv[ecephys_minimal]",
]
ecephys = [  # Note that these are the requirements of the extractors as they are on pipy
    "neuroconv[alphaomega]",
    "neuroconv[axon]",
    "neuroconv[axona]",
    "neuroconv[biocam]",
    "neuroconv[blackrock]",
    "neuroconv[cellexplorer]",
    "neuroconv[edf]",
    "neuroconv[intan]",
    "neuroconv[kilosort]",
    "neuroconv[maxwell]",
    "neuroconv[mcsraw]",
    "neuroconv[mearec]",
    "neuroconv[neuralynx]",
    "neuroconv[neuroscope]",
    "neuroconv[openephys]",
    "neuroconv[phy]",
    "neuroconv[plexon]",
    "neuroconv[plexon2]",
    "neuroconv[spike2]",
    "neuroconv[spikegadgets]",
    "neuroconv[spikeglx]",
    "neuroconv[tdt]",
    "neuroconv[whitematter]",
]

## Icephys
abf = [
    "ndx-dandi-icephys>=0.4.0",
    "neo>=0.13.2",
]
icephys = [
    "neuroconv[abf]",
]

## Image
image = [
    "pillow>=10.0.0",
]

## Fiber Photometry
fiber_photometry = [
    "ndx-fiber-photometry>=0.2.2",
]


## Ophys
ophys_minimal = [  # Keeps the minimal version of ophys dependencies in the repo
    "roiextractors>=0.7",
]
brukertiff = [
    "neuroconv[ophys_minimal]",
    "tifffile>=2023.3.21",
    "natsort",
]
caiman = [
    "neuroconv[ophys_minimal]",
    "scipy",
]
cnmfe = [
    "neuroconv[ophys_minimal]",
    "scipy",
]
extract = [
    "neuroconv[ophys_minimal]",
]
minian = [
    "neuroconv[ophys_minimal]",
]

femtonics = [
    "neuroconv[ophys_minimal]",
]
# Here for backwards compatibility with older versions of the gallery
# Remove at the start of 2026
hdf5 = [
    "neuroconv[hdf5imaging]",
]
hdf5imaging = [
    "neuroconv[ophys_minimal]",
]
inscopix = [
    "isx>=2.0; (sys_platform != 'darwin' or platform_machine != 'arm64') and python_version < '3.13'",
    "neuroconv[ophys_minimal]",
]
micromanagertiff = [
    "neuroconv[ophys_minimal]",
    "tifffile>=2023.3.21",
]
miniscope = [
    "natsort>=8.3.1",
    "ndx-miniscope>=0.5.1",
    "neuroconv[ophys_minimal]",
    "neuroconv[video]",
]
# Here for backwards compatibility with older versions of the gallery
# Remove at the start of 2026
sbx = [
    "neuroconv[scanbox]",
]
scanbox = [
    "neuroconv[ophys_minimal]",
]
scanimage = [
    "neuroconv[ophys_minimal]",
    "natsort",
    "tifffile>=2023.3.21",
]
scanimage_legacy = [
    "neuroconv[ophys_minimal]",
    "scanimage-tiff-reader>=1.4.1",
]


sima = [
    "neuroconv[ophys_minimal]",
]
suite2p = [
    "natsort",
    "neuroconv[ophys_minimal]",
]
tdt_fp = [
    "neuroconv[fiber_photometry]",
    "tdt",
]
thor = [
    "neuroconv[ophys_minimal]",
    "tifffile>=2023.3.21",
]
tiff = [
    "neuroconv[ophys_minimal]",
    "tifffile>=2018.10.18",
]
ophys = [
    "neuroconv[brukertiff]",
    "neuroconv[caiman]",
    "neuroconv[cnmfe]",
    "neuroconv[extract]",
    "neuroconv[femtonics]",
    "neuroconv[inscopix]",
    "neuroconv[hdf5imaging]",
    "neuroconv[micromanagertiff]",
    "neuroconv[miniscope]",
    "neuroconv[scanbox]",
    "neuroconv[scanimage]",
    "neuroconv[sima]",
    "neuroconv[suite2p]",
    "neuroconv[tdt_fp]",
    "neuroconv[thor]",
    "neuroconv[tiff]",
    "neuroconv[scanimage_legacy]",
]
# Note these are references to the package in pipy (not local)
full = [
    "neuroconv[aws]",
    "neuroconv[compressors]",
    "neuroconv[dandi]",
    "neuroconv[behavior]",
    "neuroconv[ecephys]",
    "neuroconv[icephys]",
    "neuroconv[image]",
    "neuroconv[ophys]",
    "neuroconv[text]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --doctest-glob='*.rst' --ignore=docs/conversion_examples_gallery/fiberphotometry/tdt_fp.rst" # TODO: remove skip when https://github.com/catalystneuro/neuroconv/issues/1429 is fixed
testpaths = ["docs/conversion_examples_gallery/", "tests"]
doctest_optionflags = "ELLIPSIS"
filterwarnings = [
    "ignore:Date is missing timezone information. Updating to local timezone.:UserWarning:pynwb.file",
    "ignore:.*compression may not be available.*:UserWarning:hdmf.container",  # We test compression in the tests, so we ignore this warning
    "error:Importing classes at __init__ has been deprecated in favor of only importing function-size wrappers and will be removed in 0.105.0.*:UserWarning:spikeinterface.extractors",  # TODO: remove when spikeinterface>=0.105.0
]

[tool.black]
line-length = 120
target-version = ['py39', 'py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.toml
  |\.yml
  |\.txt
  |\.sh
  |\.git
  |\.ini
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''


[tool.ruff]

[tool.ruff.lint]
select = [
    "F401",  # Unused import
    "I",  # All isort rules
    "D101",  # Missing docstring in public class
    "D103",  # Missing docstring in public function
    "UP006", # non-pep585 annotation (tuple, list -> tuple, list)
    "UP007" # non-pep604 annotation (Union[x, y] -> X | Y )
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**__init__.py" = ["F401", "I"]
"tests/**" = ["D"] # We are not enforcing docstrings in tests
"src/neuroconv/tools/testing/data_interface_mixins.py" = ["D"]  # We are not enforcing docstrings in the interface mixings
"docs/conf.py" = ["D"]  # We are not enforcing docstrings in the conf.py file
"docs/conversion_examples_gallery/conftest.py" = ["D"]  # We are not enforcing docstrings in the conversion examples

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"
known-first-party = ["neuroconv"]


[tool.codespell]
skip = '.git*,*.pdf,*.css,*.svg'
check-hidden = true
ignore-words-list = 'assertin,sortings'

[dependency-groups]
test = [
    "pytest",
    "pytest-cov",
    "parameterized>=0.8.1",
    "pytest-xdist"  # Runs tests on parallel
]

docs = [
    "Sphinx==8.2.3; python_version>='3.11'",  # Latest as of April 2025.
    "readthedocs-sphinx-search==0.1.2",  # Deprecated, probably should be removed see https://github.com/readthedocs/readthedocs-sphinx-search/issues/144
    "sphinx-toggleprompt==0.6.0",  # Latest as of April 2025.
    "sphinx-copybutton==0.5.2",  # Latest as of April 2025.
    "pydata_sphinx_theme==0.16.1",  # Latest as of April 2025.
    "roiextractors",  # Needed for the API documentation
    "spikeinterface>=0.102.2",  # Needed for the API documentation
    "pytest" # used to build the documentation for tools.testing
]

dev = [
    "pre-commit",
]
